--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . MySRWGame --platform=win32 --arch=x64 --overwrite"
+    "build": "electron-packager . MySRWGame --platform=win32 --arch=x64 --overwrite",
+    "dev": "five-server . --open=srw_3d.html --ignore=node_modules"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^33.0.0",
-    "electron-packager": "^17.1.2"
+    "electron-packager": "^17.1.2",
+    "five-server": "^0.4.5"
   }
 }
