--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build:play": "electron-packager . SRW_Game --platform=win32 --arch=x64 --overwrite",
-    "build:admin": "electron-packager . SRW_Game_Admin --platform=win32 --arch=x64 --overwrite",
+    "build:play": "electron-packager . SRW_Game --platform=win32 --arch=x64 --out=dist --overwrite --asar --ignore='^/dist' --ignore='^/.git' --prune=true",
+    "build:admin": "electron-packager . SRW_Game_Admin --platform=win32 --arch=x64 --out=dist --overwrite --asar --ignore='^/dist' --ignore='^/.git' --prune=true",
     "dev": "five-server . --open=srw_3d.html?mode=admin --ignore=node_modules",
     "play": "five-server . --open=srw_3d.html --ignore=node_modules"
   },
